work on the home page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/owl.theme.default.min.css" />
     <link rel="stylesheet" href="css/fancybox.css" />
     <link rel="stylesheet" href="css/style.css" />
@@ -101,7 +102,12 @@
         </div>
       </nav>
     </header>
+
+    <!-- Start Banner Section -->
     <section class="banner-sec">
+      <div class="face-img-2">
+        <img src="images/face-img2.png" alt="face-img" />
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-md-7">
@@ -110,11 +116,6 @@
                 <span></span>
                 <img src="images/face-img1.png" alt="face-img" />
               </div>
-              <!-- <img
-                class="face-img-2"
-                src="images/face-img2.png"
-                alt="face-img"
-              /> -->
               <h1>Experience Care That May Keep Skin Healthy</h1>
               <p>
                 Our products might smooth, soften, and support your skin’s
@@ -194,10 +195,220 @@
         </div>
       </div>
     </section>
+    <!-- End About Section -->
+
+    <!-- Start About Section -->
+    <section class="about-sec sp-tb bg-1">
+      <div class="about-face-img">
+        <img src="images/about-face-img.png" alt="" />
+      </div>
+      <div class="container">
+        <div class="row align-items-center gx-lg-5">
+          <div class="col-md-5">
+            <div class="about-left">
+              <img src="images/about-img.png" alt="" />
+            </div>
+          </div>
+          <div class="col-md-7">
+            <div class="about-right">
+              <h2 class="common-head">
+                Dedicated to Skincare That May Naturally Enhance and Protect
+                Your Radiance
+              </h2>
+              <p>
+                At our skincare store, we believe in offering products that may
+                support your skin’s natural beauty without harsh compromises.
+                Our carefully curated collection might help nourish, hydrate,
+                and refresh your skin for a healthier-looking appearance. Each
+                formula is designed with quality and care in mind, aiming to
+                provide gentle yet effective solutions for daily routines. We
+                strive to bring you skincare that may complement your lifestyle
+                and help you feel confident in your own skin.
+              </p>
+              <div class="mt-5 d-flex">
+                <a href="#" class="button primary-btn">
+                  Shop Now
+                  <span class="icon">
+                    <svg
+                      width="18"
+                      height="18"
+                      viewBox="0 0 18 18"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M11.0156 3.97949C10.8648 3.84025 10.6939 3.77051 10.5029 3.77051C10.3121 3.77051 10.1411 3.84231 9.99023 3.9873C9.8395 4.13224 9.76465 4.30333 9.76465 4.5C9.76465 4.69691 9.83444 4.87069 9.97363 5.02148L9.97266 5.02246L13.1865 8.23535H14.9941C15.145 8.24373 15.2791 8.28657 15.3975 8.36035L11.0156 3.97949ZM3.00586 9.74707H13.1807L13.9277 9L13.1807 8.25293H3.00586C2.7972 8.26462 2.62035 8.33959 2.47559 8.47852C2.3309 8.61741 2.25879 8.79135 2.25879 9C2.25879 9.20865 2.3309 9.38259 2.47559 9.52148C2.58419 9.62571 2.71096 9.69394 2.85547 9.72656L3.00586 9.74707ZM14.9941 9.74707C15.1831 9.73648 15.3439 9.67159 15.4805 9.55664L15.5156 9.52148C15.6665 9.37064 15.7412 9.19669 15.7412 9C15.7412 8.80331 15.6665 8.62936 15.5156 8.47852L15.4805 8.44434C15.3438 8.32913 15.1833 8.26353 14.9941 8.25293H13.2041L13.9453 8.99414L13.9395 9L13.9453 9.00586L13.2041 9.74707H14.9941ZM10.5029 14.2295C10.6939 14.2295 10.8648 14.1598 11.0156 14.0205V14.0215L15.3975 9.63965C15.2791 9.71343 15.145 9.75627 14.9941 9.76465H13.1865L9.97363 12.9785C9.83444 13.1293 9.76465 13.3031 9.76465 13.5C9.76465 13.6967 9.8395 13.8678 9.99023 14.0127C10.1411 14.1577 10.3121 14.2295 10.5029 14.2295Z"
+                        fill="#0A3366"
+                        stroke="#0A3366"
+                        stroke-width="0.0175781"
+                      />
+                    </svg>
+                  </span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End About Section -->
+
+    <!-- Start Marqee Section -->
+    <section class="marquee-1">
+      <!-- <div class="owl-carousel owl-theme">
+        <div class="item"><h4>Accessories</h4></div>
+        <div class="item"><h4>Haircare</h4></div>
+        <div class="item"><h4>Nailcare</h4></div>
+        <div class="item"><h4>Beautycare</h4></div>
+        <div class="item"><h4>Bodycare</h4></div>
+        <div class="item"><h4>Skincare</h4></div>
+        <div class="item"><h4>Accessories</h4></div>
+        <div class="item"><h4>Haircare</h4></div>
+      </div> -->
+      <div class="swiper marquee">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide"><h4>Accessories</h4></div>
+          <div class="swiper-slide"><h4>Haircare</h4></div>
+          <div class="swiper-slide"><h4>Nailcare</h4></div>
+          <div class="swiper-slide"><h4>Beautycare</h4></div>
+          <div class="swiper-slide"><h4>Bodycare</h4></div>
+          <div class="swiper-slide"><h4>Skincare</h4></div>
+          <div class="swiper-slide"><h4>Accessories</h4></div>
+          <div class="swiper-slide"><h4>Haircare</h4></div>
+        </div>
+      </div>
+    </section>
+    <!-- End Marqee Section -->
+
+    <!-- Skin Care Section -->
+    <section class="skin-care-sec sp-tb bg-2">
+      <div class="container">
+        <div class="swiper skin-care-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="skin-care-box skin-care-active">
+                <div class="skin-care-box-image">
+                  <img src="images/skin-care1.jpg" alt="" />
+                </div>
+                <div class="skin-care-box-content">
+                  <h3>Radiant Glow</h3>
+                  <p>
+                    Radiant Glow may brighten your skin tone with gentle
+                    hydration, helping restore balance while supporting
+                    smoothness and vitality for a confident, healthy look every
+                    day.
+                  </p>
+                  <ul>
+                    <li>Gentle brightness</li>
+                    <li>Soft texture</li>
+                    <li>Fresh look</li>
+                    <li>Hydrating base</li>
+                    <li>Balanced care</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="skin-care-box">
+                <div class="skin-care-box-image">
+                  <img src="images/skin-care1.jpg" alt="" />
+                </div>
+                <div class="skin-care-box-content">
+                  <h3>Radiant Glow</h3>
+                  <p>
+                    Radiant Glow may brighten your skin tone with gentle
+                    hydration, helping restore balance while supporting
+                    smoothness and vitality for a confident, healthy look every
+                    day.
+                  </p>
+                  <ul>
+                    <li>Gentle brightness</li>
+                    <li>Soft texture</li>
+                    <li>Fresh look</li>
+                    <li>Hydrating base</li>
+                    <li>Balanced care</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="skin-care-box">
+                <div class="skin-care-box-image">
+                  <img src="images/skin-care1.jpg" alt="" />
+                </div>
+                <div class="skin-care-box-content">
+                  <h3>Radiant Glow</h3>
+                  <p>
+                    Radiant Glow may brighten your skin tone with gentle
+                    hydration, helping restore balance while supporting
+                    smoothness and vitality for a confident, healthy look every
+                    day.
+                  </p>
+                  <ul>
+                    <li>Gentle brightness</li>
+                    <li>Soft texture</li>
+                    <li>Fresh look</li>
+                    <li>Hydrating base</li>
+                    <li>Balanced care</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="skin-care-box">
+                <div class="skin-care-box-image">
+                  <img src="images/skin-care1.jpg" alt="" />
+                </div>
+                <div class="skin-care-box-content">
+                  <h3>Radiant Glow</h3>
+                  <p>
+                    Radiant Glow may brighten your skin tone with gentle
+                    hydration, helping restore balance while supporting
+                    smoothness and vitality for a confident, healthy look every
+                    day.
+                  </p>
+                  <ul>
+                    <li>Gentle brightness</li>
+                    <li>Soft texture</li>
+                    <li>Fresh look</li>
+                    <li>Hydrating base</li>
+                    <li>Balanced care</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="skin-care-box">
+                <div class="skin-care-box-image">
+                  <img src="images/skin-care1.jpg" alt="" />
+                </div>
+                <div class="skin-care-box-content">
+                  <h3>Radiant Glow</h3>
+                  <p>
+                    Radiant Glow may brighten your skin tone with gentle
+                    hydration, helping restore balance while supporting
+                    smoothness and vitality for a confident, healthy look every
+                    day.
+                  </p>
+                  <ul>
+                    <li>Gentle brightness</li>
+                    <li>Soft texture</li>
+                    <li>Fresh look</li>
+                    <li>Hydrating base</li>
+                    <li>Balanced care</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/fancybox.umd.js"></script>
     <script src="js/main.js"></script>
 
