work on the home page

--- a/index.html
+++ b/index.html
@@ -405,6 +405,151 @@
       </div>
     </section>
 
+    <section class="products-sec sp-tb bg-1">
+      <div class="container">
+        <div class="heading-wrap text-center">
+          <h2 class="common-head">
+            Discover Skincare That May <br />
+            Refresh Your Glow
+          </h2>
+          <p>
+            Our collection might support hydration, nourishment, and daily skin
+            care, helping maintain a soft, radiant, and healthy-looking
+            appearance.
+          </p>
+        </div>
+        <div class="products-wrap">
+          <ul class="nav nav-tabs justify-content-center" role="tablist">
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link active"
+                id="products-tab-0"
+                data-bs-toggle="tab"
+                href="#products-tabpanel-0"
+                role="tab"
+                aria-controls="products-tabpanel-0"
+                aria-selected="true"
+                >Skin & Face</a
+              >
+            </li>
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link"
+                id="products-tab-1"
+                data-bs-toggle="tab"
+                href="#products-tabpanel-1"
+                role="tab"
+                aria-controls="products-tabpanel-1"
+                aria-selected="false"
+                >Moisturizers & Creams</a
+              >
+            </li>
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link"
+                id="products-tab-2"
+                data-bs-toggle="tab"
+                href="#products-tabpanel-2"
+                role="tab"
+                aria-controls="products-tabpanel-2"
+                aria-selected="false"
+                >Serums</a
+              >
+            </li>
+            <li class="nav-item" role="presentation">
+              <a
+                class="nav-link"
+                id="products-tab-3"
+                data-bs-toggle="tab"
+                href="#products-tabpanel-3"
+                role="tab"
+                aria-controls="products-tabpanel-3"
+                aria-selected="false"
+                >Daily Offers</a
+              >
+            </li>
+          </ul>
+          <div class="tab-content pt-5" id="tab-content">
+            <div
+              class="tab-pane active"
+              id="products-tabpanel-0"
+              role="tabpanel"
+              aria-labelledby="products-tab-0"
+            >
+              <div class="swiper products-slider">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="product-item">
+                      <a href="#" class="product-img">
+                        <span class="offer-text">Get 20% Off</span>
+                        <img src="images/product-1.jpg" alt="" />
+                      </a>
+                      <div class="product-content">
+                        <div class="product-content-left">
+                          <a href="#">
+                            <h3>Night beauty</h3>
+                          </a>
+                          <div class="price">
+                            <span class="offered-price">$89.00</span>
+                            <del class="original-price">$119.00</del>
+                          </div>
+                        </div>
+                        <a href="#" class="arrow-btn">
+                          <svg
+                            width="26"
+                            height="26"
+                            viewBox="0 0 26 26"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              d="M7.48242 19.7627L19.9824 7.2627C20.1289 7.13249 20.2266 6.97786 20.2754 6.79883C20.3242 6.61979 20.3242 6.43669 20.2754 6.24951C20.2266 6.06234 20.137 5.90365 20.0068 5.77344C19.8766 5.64323 19.7179 5.55371 19.5308 5.50488C19.3436 5.45605 19.1605 5.45605 18.9814 5.50488C18.8024 5.55371 18.6478 5.65137 18.5176 5.79785L6.01758 18.2979C5.82227 18.5094 5.72461 18.7536 5.72461 19.0303C5.72461 19.307 5.82633 19.547 6.02979 19.7505C6.23324 19.9539 6.47331 20.0557 6.75 20.0557C7.02669 20.0557 7.27083 19.958 7.48242 19.7627ZM18.2002 15.9053C18.2165 16.1982 18.3223 16.4424 18.5176 16.6377C18.7129 16.833 18.957 16.9307 19.25 16.9307C19.543 16.9307 19.7871 16.833 19.9824 16.6377C20.1777 16.4424 20.2835 16.1982 20.2998 15.9053V6.53027C20.2835 6.2373 20.1777 5.99316 19.9824 5.79785C19.7871 5.60254 19.543 5.49675 19.25 5.48047H9.875C9.58203 5.49675 9.33789 5.60254 9.14258 5.79785C8.94727 5.99316 8.84961 6.2373 8.84961 6.53027C8.84961 6.82324 8.94727 7.06738 9.14258 7.2627C9.33789 7.45801 9.58203 7.5638 9.875 7.58008H18.2002V15.9053Z"
+                              fill="#0A3366"
+                            />
+                          </svg>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide"><h4>Haircare</h4></div>
+                  <div class="swiper-slide"><h4>Nailcare</h4></div>
+                  <div class="swiper-slide"><h4>Beautycare</h4></div>
+                  <div class="swiper-slide"><h4>Bodycare</h4></div>
+                  <div class="swiper-slide"><h4>Skincare</h4></div>
+                  <div class="swiper-slide"><h4>Accessories</h4></div>
+                  <div class="swiper-slide"><h4>Haircare</h4></div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="tab-pane"
+              id="products-tabpanel-1"
+              role="tabpanel"
+              aria-labelledby="products-tab-1"
+            >
+              Tab 2 selected
+            </div>
+            <div
+              class="tab-pane"
+              id="products-tabpanel-2"
+              role="tabpanel"
+              aria-labelledby="products-tab-2"
+            >
+              Tab 3 selected
+            </div>
+            <div
+              class="tab-pane"
+              id="products-tabpanel-3"
+              role="tabpanel"
+              aria-labelledby="products-tab-3"
+            >
+              Tab 4 selected
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
