work on the home page

--- a/index.html
+++ b/index.html
@@ -2570,7 +2570,7 @@
                 <div class="col-6">
                   <div class="why-us-img2">
                     <div class="google-rating">
-                      <img src="images/google-icon.png" alt="" />
+                      <img src="images/google-icon.svg" alt="" />
                       <div>
                         <div class="d-flex gap-2 align-items-center mb-2">
                           <div class="star-wrap">
