work on the home page

--- a/index.html
+++ b/index.html
@@ -3134,18 +3134,19 @@
 
     <!-- Start Footer Section -->
     <footer>
+      <img src="im" alt="" />
       <div class="container">
         <div class="row">
           <div class="col-md-6">
             <div class="footer-top-item">
               <a href="#">
-                <img src="images/logo.svg" alt="" />
+                <img src="images/logo-white.svg" alt="" />
               </a>
             </div>
           </div>
           <div class="col-md-6">
             <div class="footer-top-item">
-              <div class="d-flex gap-3">
+              <div class="d-flex justify-content-end gap-3">
                 <a href="#" class="button primary-btn">
                   Shop Now
                   <span class="icon">
@@ -3184,6 +3185,75 @@
                     </svg>
                   </span>
                 </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer-mid">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="footer-mid-item">
+                <p>
+                  At Eventify, we bring live entertainment to life—book your
+                  tickets now and join the excitement.
+                </p>
+                <h4>Important Updates Waiting for you</h4>
+                <div class="subscription">
+                  <input type="email" placeholder="Your Email Address" />
+                  <button class="submit-icon">
+                    <svg
+                      width="19"
+                      height="19"
+                      viewBox="0 0 19 19"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M1.29332 3.34013C1.25332 3.10013 1.27332 2.85013 1.35332 2.59013C1.43332 2.33013 1.58332 2.11013 1.80332 1.93013C2.02332 1.75013 2.26332 1.65013 2.52332 1.63013C2.78332 1.61013 3.03332 1.66013 3.27332 1.78013L16.6533 8.44013C16.8533 8.56013 17.0233 8.73013 17.1633 8.95013C17.3033 9.17013 17.3733 9.42013 17.3733 9.70013C17.3733 9.98013 17.3033 10.2301 17.1633 10.4501C17.0233 10.6701 16.8533 10.8401 16.6533 10.9601L3.27332 17.6201C3.03332 17.7401 2.78332 17.7901 2.52332 17.7701C2.26332 17.7501 2.02332 17.6501 1.80332 17.4701C1.58332 17.2901 1.43332 17.0701 1.35332 16.8101C1.27332 16.5501 1.25332 16.3001 1.29332 16.0601L2.73332 10.4201L10.8333 9.70013L2.73332 8.92013L1.29332 3.34013Z"
+                        fill="currentColor"
+                      />
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="footer-mid-item text-center">
+                <h3>Quick Links</h3>
+                <ul>
+                  <li>
+                    <a href="#">Home</a>
+                  </li>
+                  <li>
+                    <a href="#">About US</a>
+                  </li>
+                  <li>
+                    <a href="#">Contact Us</a>
+                  </li>
+                  <li>
+                    <a href="#">Privacy Policy</a>
+                  </li>
+                  <li>
+                    <a href="#">Terms Of Condition</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="footer-mid-item text-center">
+                <h3>Shop now</h3>
+                <ul>
+                  <li>
+                    <a href="#">Shop</a>
+                  </li>
+                  <li>
+                    <a href="#">Cart</a>
+                  </li>
+                  <li>
+                    <a href="#">Wishlist</a>
+                  </li>
+                  <li></li>
+                </ul>
               </div>
             </div>
           </div>
