work on the home page

--- a/index.html
+++ b/index.html
@@ -189,6 +189,14 @@
                   fill="#F46700"
                 />
               </svg>
+              <div class="banner-play-btn">
+                <a href="#" class="play-btn">
+                  <i class="fa-solid fa-play"></i>
+                  <div class="text">
+                    <p>Explore More collection&nbsp;</p>
+                  </div>
+                </a>
+              </div>
               <img src="images/banner-img.png" alt="" />
             </div>
           </div>
@@ -206,6 +214,14 @@
         <div class="row align-items-center gx-lg-5">
           <div class="col-md-5">
             <div class="about-left">
+              <div class="play-btn-wrap">
+                <a href="#" class="play-btn">
+                  <i class="fa-solid fa-play"></i>
+                  <div class="text">
+                    <p>Explore More collection&nbsp;</p>
+                  </div>
+                </a>
+              </div>
               <img src="images/about-img.png" alt="" />
             </div>
           </div>
@@ -3123,7 +3139,83 @@
           </div>
           <div class="col-md-5">
             <div class="faq-img">
-              <img class="img-circle" src="images/circle-backdrop.png" />
+              <div class="img-circle">
+                <svg
+                  viewBox="0 0 694 694"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <circle
+                    cx="347"
+                    cy="347"
+                    r="346"
+                    stroke="currentColor"
+                    stroke-opacity="0.1"
+                    stroke-width="2"
+                    stroke-dasharray="12 12"
+                  ></circle>
+                  <circle
+                    cx="347"
+                    cy="347"
+                    r="296"
+                    stroke="currentColor"
+                    stroke-opacity="0.2"
+                    stroke-width="2"
+                    stroke-dasharray="12 12"
+                  ></circle>
+                  <circle
+                    cx="347"
+                    cy="347"
+                    r="244"
+                    stroke="currentColor"
+                    stroke-opacity="0.3"
+                    stroke-width="2"
+                    stroke-dasharray="12 12"
+                  ></circle>
+                  <circle
+                    cx="147.5"
+                    cy="206.5"
+                    r="6.5"
+                    fill="currentColor"
+                  ></circle>
+                  <circle
+                    opacity="0.3"
+                    cx="206.5"
+                    cy="30.5"
+                    r="4.5"
+                    fill="currentColor"
+                  ></circle>
+                  <circle
+                    opacity="0.6"
+                    cx="62.5"
+                    cy="433.5"
+                    r="2.5"
+                    fill="currentColor"
+                  ></circle>
+                  <ellipse
+                    opacity="0.6"
+                    cx="525"
+                    cy="109.5"
+                    rx="4"
+                    ry="3.5"
+                    fill="currentColor"
+                  ></ellipse>
+                  <circle
+                    cx="642.5"
+                    cy="361.5"
+                    r="3.5"
+                    fill="currentColor"
+                  ></circle>
+                  <ellipse
+                    opacity="0.3"
+                    cx="573"
+                    cy="606.5"
+                    rx="3"
+                    ry="2.5"
+                    fill="currentColor"
+                  ></ellipse>
+                </svg>
+              </div>
               <img src="images/faq-image.png" alt="" />
             </div>
           </div>
@@ -3134,7 +3226,6 @@
 
     <!-- Start Footer Section -->
     <footer>
-      <img src="im" alt="" />
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -3147,7 +3238,7 @@
           <div class="col-md-6">
             <div class="footer-top-item">
               <div class="d-flex justify-content-end gap-3">
-                <a href="#" class="button primary-btn">
+                <a href="#" class="button primary-btn outline-btn-white">
                   Shop Now
                   <span class="icon">
                     <svg
@@ -3257,6 +3348,81 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="get-in-touch">
+          <div class="row">
+            <div class="col-md-3">
+              <div class="get-in-touch-item">
+                <div>
+                  <h5>Get in Touch with us</h5>
+                  <p>Lorem Ipsum is simply dummy</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <a href="#" class="get-in-touch-item">
+                <svg
+                  width="24"
+                  height="25"
+                  viewBox="0 0 24 25"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M21 17.1688C21 16.9032 20.9219 16.6766 20.7656 16.4891C20.6094 16.3016 20.3985 16.1844 20.1328 16.1376C19.086 15.9969 18.0703 15.7391 17.086 15.3641C16.8985 15.3016 16.711 15.2899 16.5235 15.329C16.336 15.368 16.1719 15.4579 16.0313 15.5985L14.7656 16.8641C14.5938 17.0204 14.3985 17.1141 14.1797 17.1454C13.961 17.1766 13.75 17.1376 13.5469 17.0282C12.2031 16.2626 10.9922 15.3407 9.91408 14.2626C8.83596 13.1844 7.91408 11.9735 7.14846 10.6297C7.03908 10.4266 6.99611 10.2157 7.01955 9.99693C7.04299 9.77818 7.14064 9.59068 7.31252 9.43443L8.57814 8.1688C8.71877 8.01255 8.80861 7.84068 8.84767 7.65318C8.88674 7.46568 8.87502 7.27818 8.81252 7.09068C8.43752 6.1063 8.17971 5.09849 8.03908 4.06724C8.00783 3.81724 7.89846 3.61021 7.71096 3.44615C7.52346 3.28209 7.29689 3.20005 7.03127 3.20005H4.00783C3.72658 3.21568 3.4883 3.32896 3.29299 3.5399C3.09767 3.75084 3.00783 3.99693 3.02346 4.27818C3.17971 5.76255 3.50392 7.20005 3.99611 8.59068C4.4883 9.9813 5.14064 11.3016 5.95314 12.5516C6.68752 13.7079 7.53517 14.7665 8.49611 15.7274C9.45705 16.6883 10.5156 17.536 11.6719 18.2704C12.9219 19.0672 14.2383 19.7118 15.6211 20.204C17.0039 20.6961 18.4297 21.0282 19.8985 21.2001C20.1953 21.2157 20.4492 21.1219 20.6602 20.9188C20.8711 20.7157 20.9844 20.4735 21 20.1922V17.1688ZM22.9922 20.1688C22.9922 20.6063 22.9102 21.0165 22.7461 21.3993C22.5821 21.7821 22.3399 22.118 22.0196 22.4071C21.6992 22.6961 21.3399 22.9071 20.9414 23.0399C20.543 23.1727 20.125 23.2235 19.6875 23.1922C18.0625 23.0047 16.4844 22.6415 14.9531 22.1024C13.4219 21.5633 11.9688 20.8485 10.5938 19.9579C9.31252 19.1454 8.14064 18.2079 7.07814 17.1454C6.01564 16.0829 5.07814 14.911 4.26564 13.6297C3.35939 12.2547 2.63283 10.7938 2.08596 9.24693C1.53908 7.70005 1.1797 6.11412 1.00783 4.48912C0.97658 4.05162 1.02736 3.63755 1.16017 3.24693C1.29299 2.8563 1.50392 2.50084 1.79299 2.18052C2.08205 1.86021 2.41799 1.61802 2.8008 1.45396C3.18361 1.2899 3.58596 1.20787 4.00783 1.20787H7.03127C7.79689 1.20787 8.45705 1.45005 9.01174 1.93443C9.56642 2.4188 9.90627 3.0438 10.0313 3.80943C10.1563 4.70005 10.375 5.55943 10.6875 6.38755C10.8906 6.95005 10.9336 7.51255 10.8164 8.07505C10.6992 8.63755 10.4297 9.13755 10.0078 9.57505L9.28127 10.3016C9.87502 11.2235 10.5586 12.0711 11.332 12.8446C12.1055 13.618 12.961 14.3016 13.8985 14.8954L14.625 14.1688C15.0469 13.7626 15.5391 13.4969 16.1016 13.3719C16.6641 13.2469 17.2266 13.286 17.7891 13.4891C18.6328 13.8016 19.5078 14.0204 20.4141 14.1454C21.1797 14.2704 21.8008 14.6141 22.2774 15.1766C22.7539 15.7391 22.9922 16.411 22.9922 17.1922V20.1688Z"
+                    fill="currentColor"
+                  />
+                </svg>
+                <div class="content">
+                  <h6>Call Us</h6>
+                  <p>+1 123 456 7890</p>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#" class="get-in-touch-item">
+                <svg
+                  width="24"
+                  height="25"
+                  viewBox="0 0 24 25"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M4.00781 3.2002H19.9922C20.8516 3.21582 21.5625 3.50879 22.125 4.0791C22.6875 4.64941 22.9766 5.35645 22.9922 6.2002V18.2002C22.9766 19.0439 22.6875 19.751 22.125 20.3213C21.5625 20.8916 20.8516 21.1846 19.9922 21.2002H4.00781C3.14844 21.1846 2.4375 20.8916 1.875 20.3213C1.3125 19.751 1.02344 19.0439 1.00781 18.2002V6.2002C1.02344 5.35645 1.3125 4.64941 1.875 4.0791C2.4375 3.50879 3.14844 3.21582 4.00781 3.2002ZM20.8828 5.75488C20.8047 5.58301 20.6875 5.4502 20.5312 5.35645C20.375 5.2627 20.1953 5.20801 19.9922 5.19238H4.00781C3.80469 5.20801 3.625 5.2627 3.46875 5.35645C3.3125 5.4502 3.19531 5.58301 3.11719 5.75488L12 11.9893L20.8828 5.75488ZM21 8.12207L12.5625 14.0283C12.3906 14.1377 12.2031 14.1924 12 14.1924C11.7969 14.1924 11.6094 14.1377 11.4375 14.0283L3 8.12207V18.2002C3 18.4814 3.09766 18.7158 3.29297 18.9033C3.48828 19.0908 3.72656 19.1924 4.00781 19.208H19.9922C20.2734 19.1924 20.5117 19.0908 20.707 18.9033C20.9023 18.7158 21 18.4814 21 18.2002V8.12207Z"
+                    fill="currentColor"
+                  />
+                </svg>
+                <div class="content">
+                  <h6>Send us a Mail</h6>
+                  <p>info@example.com</p>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-3">
+              <a href="#" class="get-in-touch-item">
+                <svg
+                  width="24"
+                  height="25"
+                  viewBox="0 0 24 25"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M12 23.1924C8.89062 23.1143 6.30078 22.04 4.23047 19.9697C2.16016 17.8994 1.08594 15.3096 1.00781 12.2002C1.08594 9.09082 2.16016 6.50098 4.23047 4.43066C6.30078 2.36035 8.89062 1.28613 12 1.20801C15.1094 1.28613 17.6992 2.36035 19.7695 4.43066C21.8398 6.50098 22.9141 9.09082 22.9922 12.2002C22.9141 15.3096 21.8398 17.8994 19.7695 19.9697C17.6992 22.04 15.1094 23.1143 12 23.1924ZM12 21.2002C14.5469 21.1377 16.668 20.2588 18.3633 18.5635C20.0586 16.8682 20.9375 14.7471 21 12.2002C20.9375 9.65332 20.0586 7.53223 18.3633 5.83691C16.668 4.1416 14.5469 3.2627 12 3.2002C9.45312 3.2627 7.33203 4.1416 5.63672 5.83691C3.94141 7.53223 3.0625 9.65332 3 12.2002C3.0625 14.7471 3.94141 16.8682 5.63672 18.5635C7.33203 20.2588 9.45312 21.1377 12 21.2002ZM13.0078 6.2002C12.9922 5.91895 12.8906 5.68457 12.7031 5.49707C12.5156 5.30957 12.2812 5.21582 12 5.21582C11.7188 5.21582 11.4844 5.30957 11.2969 5.49707C11.1094 5.68457 11.0078 5.91895 10.9922 6.2002V12.2002C11.0078 12.4814 11.1094 12.7158 11.2969 12.9033L14.2969 15.9033C14.5 16.0908 14.7344 16.1846 15 16.1846C15.2656 16.1846 15.4961 16.0869 15.6914 15.8916C15.8867 15.6963 15.9844 15.4658 15.9844 15.2002C15.9844 14.9346 15.8906 14.7002 15.7031 14.4971L13.0078 11.7783V6.2002Z"
+                    fill="currentColor"
+                  />
+                </svg>
+                <div class="content">
+                  <h6>Opening Time</h6>
+                  <p>Mon -Sat: 7:00 - 17:00</p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-copyright">
+          <p>© 2025 Cassia. All Rights Reserved.</p>
         </div>
       </div>
     </footer>
